# adaptive-study-agent

./: .gitignore  README.md  app.py  project_3_adaptive_study_agent_CLAUDE.md  pyproject.toml  requirements.txt  study_agent_history.md  work_summary_15032026.md
src/: main.py
src/graph/: build_graph.py  edges.py  nodes.py  state.py
src/prompts/: answer_prompt.py  evaluate_prompt.py  question_prompt.py
src/tools/: ingest.py  retriever.py
tests/: test_edges.py  test_ingest.py
